update udpate customer
